objects/sfFma__FeatureParameter__c.object
<CustomObject>
    <description>A custom object for storing feature parameters.  A new record is created of this object for every feature parameter that is ADDED as part of an uploaded package version. This record is automatically created upon the first package install of that package version.</description>
    <fields>
        <fullName>sfFma__DataFlowDirection__c</fullName>
        <description>Determines whether data flows from the ISV to the subscriber (Feature Setting) or from the subscriber to the ISV (Usage Metric</description>
        <label>Data Flow Direction</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LMO to Subscriber</fullName>
                </value>
                <value>
                    <fullName>Subscriber to LMO</fullName>
                </value>
                <value>
                    <fullName>Provisioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfFma__DataType__c</fullName>
        <description>Data type of the Feature Parameter.</description>
        <label>Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfFma__FullName__c</fullName>
        <description>Name of the Feature Parameter</description>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfFma__IntroducedInPackageVersion__c</fullName>
        <description>The version of the package in which this feature parameter was first introduced</description>
        <label>Introduced in Package Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfFma__Namespace_Prefix__c</fullName>
        <description>Namespace prefix of the Feature Parameter.</description>
        <label>Namespace Prefix</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfFma__Package__c</fullName>
        <label>Package</label>
        <referenceTo>sfLma__Package__c</referenceTo>
        <relationshipLabel>Feature Parameters</relationshipLabel>
        <relationshipName>Feature_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Feature Parameter</label>
    <listViews>
        <fullName>All_Features</fullName>
        <columns>NAME</columns>
        <columns>sfFma__FullName__c</columns>
        <columns>sfFma__DataType__c</columns>
        <columns>sfFma__IntroducedInPackageVersion__c</columns>
        <columns>sfFma__Package__c</columns>
        <columns>sfFma__DataFlowDirection__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Features</label>
    </listViews>
    <listViews>
        <fullName>sfFma__All</fullName>
        <columns>NAME</columns>
        <columns>sfFma__DataType__c</columns>
        <columns>sfFma__FullName__c</columns>
        <columns>sfFma__Namespace_Prefix__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Feature Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sfFma__DataFlowDirectionUpdatePrevention</fullName>
        <active>true</active>
        <description>Data Flow Direction can only be updated by the Feature Management App.</description>
        <errorConditionFormula>AND(  ISCHANGED( sfFma__DataFlowDirection__c ),
 $User.Id &lt;&gt;  CreatedById 
)</errorConditionFormula>
        <errorDisplayField>sfFma__DataFlowDirection__c</errorDisplayField>
        <errorMessage>This value is set by the installed package and cannot be changed. Click undo or cancel to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__DataTypeUpdatePrevention</fullName>
        <active>true</active>
        <description>Data Type can only be created or updated by the Feature Management App.</description>
        <errorConditionFormula>AND( ISCHANGED( sfFma__DataType__c ),
 $User.Id &lt;&gt;  CreatedById )</errorConditionFormula>
        <errorDisplayField>sfFma__DataType__c</errorDisplayField>
        <errorMessage>This value is set by the installed package and cannot be changed. Click undo or cancel to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__FullNameUpdatePrevention</fullName>
        <active>true</active>
        <description>Feature Parameter Full Name can only be updated by the Feature Management App.</description>
        <errorConditionFormula>AND( ISCHANGED( sfFma__FullName__c ),
 $User.Id &lt;&gt;  CreatedById )</errorConditionFormula>
        <errorDisplayField>sfFma__FullName__c</errorDisplayField>
        <errorMessage>This value is set by the installed package and cannot be changed. Click undo or cancel to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__XSS_Prevention_FullName</fullName>
        <active>true</active>
        <description>Prevent malicious code from being introduced into our text fields.</description>
        <errorConditionFormula>NOT(REGEX(sfFma__FullName__c , &quot;\\w+__\\w+&quot;))</errorConditionFormula>
        <errorDisplayField>sfFma__FullName__c</errorDisplayField>
        <errorMessage>Full Name must be in the format of &lt;namespace&gt;__&lt;developer name&gt;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__XSS_Prevention_Namespace</fullName>
        <active>true</active>
        <description>Prevent malicious code from being stored in the Namespace Prefix text field.</description>
        <errorConditionFormula>NOT(REGEX(sfFma__Namespace_Prefix__c , &quot;\\w+&quot;))</errorConditionFormula>
        <errorDisplayField>sfFma__Namespace_Prefix__c</errorDisplayField>
        <errorMessage>Namespace prefix must only contain alpha numeric characters and/or underscores.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__XSS_Prevention_Version</fullName>
        <active>true</active>
        <description>Prevent malicious code from being stored in the Introduced in Package Version field.</description>
        <errorConditionFormula>NOT(REGEX(sfFma__IntroducedInPackageVersion__c, &quot;^(\\w{15,18}|\\d+\\.\\d+)$&quot;))</errorConditionFormula>
        <errorDisplayField>sfFma__IntroducedInPackageVersion__c</errorDisplayField>
        <errorMessage>Version number strings must be in the format of &lt;major version&gt;.&lt;minor version&gt;</errorMessage>
    </validationRules>
</CustomObject>